; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_prep.c_PpcPrepPutChar.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/powerpc/extr_prep.c_PpcPrepPutChar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prep_serial = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PpcPrepPutChar(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 10
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @prep_serial, align 4
  %7 = call i32 @SetPhysByte(i32 %6, i32 13)
  %8 = call i32 (...) @sync()
  br label %9

9:                                                ; preds = %5, %1
  %10 = load i32, i32* @prep_serial, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @SetPhysByte(i32 %10, i32 %11)
  %13 = call i32 (...) @sync()
  ret void
}

declare dso_local i32 @SetPhysByte(i32, i32) #1

declare dso_local i32 @sync(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
